# Autonomous-Mobile-Robot

./: README.md  Source_code.ino
src/wmr_description/: package.xml
src/wmr_description/gazebo/: wmr_detailed_material.gazebo  wmr_detailed_plugins.gazebo
src/wmr_description/launch/: controller.launch  display.launch  gazebo.launch
src/wmr_description/meshes/: caster_left_back_1.stl  caster_left_front_1.stl  caster_right_front_1.stl
wmr_description/: CMakeLists.txt  package.xml
wmr_description/gazebo/: wmr_detailed_physics.gazebo  wmr_detailed_plugins.gazebo
wmr_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
wmr_description/meshes/: Lidar_1.stl  base_link.stl  caster_right_back_1.stl  left_wheel_1.stl  right_wheel_1.stl
wmr_description/meshes/maze/: model.sdf
wmr_description/rviz/: urdf.rviz
wmr_description/urdf/: materials.xacro  wmr.trans  wmr.xacro
wmr_description/world/: maze.world
wmr_navigation/: CMakeLists.txt  package.xml
wmr_navigation/config/: local_planner.yaml  localization.yaml
wmr_navigation/launch/: localization.launch  navigation.launch
wmr_navigation/maps/: maze_map.pgm  maze_map.yaml
