<?xml version="1.0"?>
<package format="2">
  <name>wmr_navigation</name>
  <version>0.0.0</version>
  <description>The wmr_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sudarshanmk29@gmail.com">sudarshanmk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>map_server</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>
  <build_export_depend>dwa_local_planner</build_export_depend>
  <build_export_depend>global_planner</build_export_depend>
  <build_export_depend>map_server</build_export_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>map_server</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
